--- a/src/App.css
+++ b/src/App.css
@@ -46,8 +46,8 @@ h2 {
 
 
 img {
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 300px;
 }
 
 .form {
@@ -59,4 +59,9 @@ img {
   margin-top: 55px;
   width: 355px;
   margin-left: 25px;
+  background: #07244A;
+}
+
+h4, h5, h3, p, h1 {
+  color: white;
 }
