--- a/src/App.css
+++ b/src/App.css
@@ -55,13 +55,42 @@ img {
 }
 
 .App {
-  border: 2px solid teal;
+  /* border: 2px solid teal; */
   margin-top: 55px;
   width: 355px;
   margin-left: 25px;
-  background: #07244A;
+  height: 823px;
+  /* background: #07244A; */
 }
 
+html {
+  background:  #07244A;
+}
 h4, h5, h3, p, h1 {
   color: white;
+  font-family: monospace;
+}
+
+h3 {
+  margin-bottom: 100px;
+  font-size: 25px;
+}
+
+hr {
+  width: 350px;
+  margin-top: 25px;
+}
+
+h5{
+  margin-top: 50px;
+  font-size: 25px;
+}
+
+.min-max {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+h4{
+  font-size: 20px;
 }
